--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,22 +1,33 @@
 <img alt="Burger Image">
 
-<container>
+<div class="container">
     <h1>Burger List</h1>
-    <ul id="notDevoured">Yet to be consumed
-        {{#each burger}}
-            {{#unless devoured}}
-                {{> burger/burger-block}}
-            {{/unless}}
-        {{/each}}
-    </ul>
-    <ul id="devoured">Devoured
-        {{#each burger}}
-            {{#if devoured}}
-                {{> burger/burger-block}}
-            {{/if}}
-        {{/each}}
-    </ul>
-</container>
+    <div class="row">
+        <div class="col-6">
+            <ul id="notDevoured">
+                <h2>Yet to be consumed</h1>
+                {{#each burger}}
+                    {{#unless devoured}}
+                        {{> burger/burger-block}}
+                    {{/unless}}
+                {{/each}}
+            </ul>
+        </div>
+        <div class="col-6">
+            <ul id="devoured">
+                <h2>Devoured</h1>
+                {{#each burger}}
+                    {{#if devoured}}
+                        {{> burger/burger-block}}
+                    {{/if}}
+                {{/each}}
+            </ul>
+        </div>
+    </div>
+
+        
+
+</div>
 
 <form>
     <label for="burgerInput">Kind of Burger:</label>
