--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<img alt="Burger Image">
+<img src="/assets/img/burgerPic.jpg" alt="Burger Image">
 
 <div class="container">
     <h1>Burger List</h1>
